# palette

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.trae/rules/: project_rules.md
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20251116_000001_create_users_table.rs  m20251116_000002_create_user_providers_table.rs  m20251116_000003_create_provider_models_table.rs  m20251116_000004_create_conversations_tables.rs
backend/src/: config.rs  database.rs  error.rs  main.rs  routes.rs  state.rs  utils.rs
backend/src/clients/: llm_client.rs  mod.rs  model_info_client.rs  pricing_client.rs
backend/src/http/: mod.rs
backend/src/http/dto/: auth_schema.rs  common_schema.rs  conversation_schema.rs  mod.rs  provider_models_schema.rs  provider_schema.rs  user_schema.rs
backend/src/http/extractors/: jwt.rs
backend/src/http/handlers/: auth_handler.rs  conversation_handler.rs  mod.rs  provider_model_handler.rs  user_provider_handler.rs
backend/src/models/: conversation_message.rs  conversation_session.rs  mod.rs  provider_model.rs  user.rs  user_provider.rs  user_providers.rs
backend/src/repositories/: conversation_message_repo.rs  conversation_session_repo.rs  mod.rs  provider_model_repo.rs  provider_repo.rs  user_repo.rs
backend/src/services/: auth_service.rs  conversation_service.rs  mod.rs  provider_model_service.rs  user_provider_service.rs
frontend/: Dockerfile  components.d.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: conversation.ts  model.ts  provider.ts  user.ts
frontend/src/assets/: main.css
frontend/src/components/: BaseButton.vue  BaseInput.vue  BaseLoading.vue  BaseSelect.vue  ChatContent.vue  ChatInput.vue  FoldButton.vue  GeneralSettings.vue  HorizontalTab.vue  MessageToast.vue  SideBar.vue  (+3 more)
(+18 files in other folders)
