[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.13", features = ["attributes"] }
sea-orm-migration = { version = "1.1", features = ["cli", "sqlx-postgres", "runtime-async-std-rustls"] }